@@ -468,8 +468,8 @@ static hxmc_t *HXformat2_xvar(const struct fmt_entry *entry)
 		case HXTYPE_UINT:   PTR("%u", unsigned int);
 		case HXTYPE_LONG:   PTR("%ld", long);
 		case HXTYPE_ULONG:  PTR("%lu", unsigned long);
-		case HXTYPE_LLONG:  PTR("%lld", long long);
-		case HXTYPE_ULLONG: PTR("%llu", unsigned long long);
+		case HXTYPE_LLONG:  PTR("%" HX_LONGLONG_FMT "d", long long);
+		case HXTYPE_ULLONG: PTR("%" HX_LONGLONG_FMT "u", unsigned long long);
 		case HXTYPE_FLOAT:  PTR("%f", float);
 		case HXTYPE_DOUBLE: PTR("%f", double);
 
